--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ body {
   
 }
 
-.freewebbtn {
+.floopywebbtn {
   position: absolute;
   top: 3px;
   left: 294px; 
@@ -217,7 +217,7 @@ body {
   animation: menuBtnPop 0.5 ease-in-out;
 }
 
-.freewebbtn:hover {
+.floopywebbtn:hover {
   animation: menuBtnPop 0.5s ease-in-out infinite;
   border: 4px solid whitesmoke;
   
@@ -622,7 +622,7 @@ body {
   color: red;
 }
 
-.freewebtext {
+.floopywebtext {
   color: orangered;
   border: none;
   background-color: transparent;
@@ -655,4 +655,20 @@ body {
 @keyframes rainbowGradient {
   0% { background-position: 0% 50%; }
   100% { background-position: 100% 50%; }
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+@keyframes spin {
+  100% { transform: rotate(360deg); }
 }
