--- a/styles.css
+++ b/styles.css
@@ -672,3 +672,16 @@ body {
 @keyframes spin {
   100% { transform: rotate(360deg); }
 }
+/* For Chrome, Safari, and Opera */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
+  border-radius: 6px; /* Add this line to make the scrollbar thumb round */
+}
