--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,24 @@
   color: transparent;
 }
 
+.game-count-1 {
+  background-image: linear-gradient(45deg, red, SkyBlue, red, darkblue);
+  -webkit-background-clip: text;
+  background-size: 200% 200%;
+  animation: gradientRightToLeft 7s ease infinite;
+  text-shadow: 0 0 20px rgba(0, 0, 255, 0.3), 0 0 40px rgba(0, 0, 255, 0.3); /* Blue glow */
+  color: transparent;
+}
+
+.game-count-2 {
+  background-image: linear-gradient(45deg, lime, yellow, green, yellow);
+  -webkit-background-clip: text;
+  background-size: 200% 200%;
+  animation: gradientRightToLeft 7s ease infinite;
+  text-shadow: 0 0 20px rgba(0, 0, 255, 0.3), 0 0 40px rgba(0, 0, 255, 0.3); /* Blue glow */
+  color: transparent;
+}
+
 body {
     background-color: #111111; /* This is a very dark gray, lighter than black */
     color: white;
@@ -572,13 +590,14 @@ body {
   cursor: pointer;
   transition: 0.5s;
   padding: 0px 0px;
-  border-image-source: linear-gradient(45deg, white, black, white, black, white, black);
+  border-image-source: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
   border-image-slice: 1;
+  animation: menuGradient 1s linear infinite;
 }
 
 .choicegamebtn:hover {
   animation: menuBtnPop 0.5s ease-in-out infinite;
-  border: 4px solid yellow;
+  border: 4px solid white;
 }
 
 .gamediv {
@@ -617,7 +636,7 @@ body {
 
 .tvchoicebtn:hover {
   animation: menuBtnPop 0.5s ease-in-out infinite;
-  border: 4px solid yellow;
+  border: 4px solid white;
   color: red;
 }
 
