--- a/styles.css
+++ b/styles.css
@@ -703,3 +703,34 @@ body {
   background-image: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
   border-radius: 6px; /* Add this line to make the scrollbar thumb round */
 }
+
+
+.randombtn {
+  display: inline-block;
+  background-color: #1c1c1c;
+  color: white;
+  border: px solid white;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s;
+  padding: 10px 20px; /* Increase the padding values to make the button larger */
+  border-image-source: linear-gradient(45deg, red, orange, yellow, green, blue, purple);
+  border-image-slice: 1;
+}
+
+.randombtn:hover {
+  border: 4px solid whitesmoke;
+  animation: rainbowGlow 2s linear infinite;
+}
+
+@keyframes rainbowGlow {
+  0% { border-color: red; }
+  14% { border-color: orange; }
+  28% { border-color: yellow; }
+  42% { border-color: green; }
+  57% { border-color: blue; }
+  71% { border-color: indigo; }
+  85% { border-color: violet; }
+  100% { border-color: red; }
+}
