--- a/styles.css
+++ b/styles.css
@@ -453,11 +453,12 @@ body {
 }
 
 .logo {
-  border-radius: 50%;
-  border: red 2px solid;
-  width: 100px;
-  height: 100px;
+  border: white 2px solid;
+  width: 75px;
+  height: 75px;
   left: 20px;
+  user-select: none;
+  transform: translateY(-10px);
 }
 
 .dropdown-container {
@@ -729,4 +730,63 @@ body {
   71% { border-color: indigo; }
   85% { border-color: violet; }
   100% { border-color: red; }
+}
+
+.panicbutton {
+  display: inline-block;
+  background-color: #1c1c1c;
+  color: white;
+  border: px solid white;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s;
+  padding: 10px 20px; /* Increase the padding values to make the button larger */
+  border-image-source: linear-gradient(45deg, red, orange, red, orange, red, orange);
+  border-image-slice: 1;
+}
+
+.panicbutton:hover {
+  animation: shake 0.5s linear infinite;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: red;  border-image-source: linear-gradient(45deg, red, white, red, white, red, white);
+}
+
+.notifications-container {
+  margin-right: 5px;
+  background-color: darkslategrey;
+  height: 200px;
+  border: solid 4px white;
+  border-image-source: linear-gradient(45deg, lightblue, skyblue, deepskyblue, blue, darkblue);
+  border-image-slice: 1;
+  width: 350px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 1000; /* This will ensure it stays on top of other elements */
+}
+
+.notification-title {
+  background-image: linear-gradient(45deg, red, orange, yellow, green, blue, purple, red, orange, yellow, green, blue, purple);
+  -webkit-background-clip: text;
+  background-size: 200% 200%;
+  animation: rainbowGradient 5s ease infinite;
+  text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+  color: transparent;
+  font-weight: bolder;
+  user-select: none;
+  text-align: center;
+}
+
+.notification-description {
+  text-align: center;
+  user-select: none;
+}
+
+.notification-timer {
+  color: white;
+  text-align: center;
+  font-weight: bolder;
+  user-select: none;
+  background-color: orangered;
 }
