--- a/styles.css
+++ b/styles.css
@@ -752,6 +752,17 @@ body {
   color: red;  border-image-source: linear-gradient(45deg, red, white, red, white, red, white);
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 .notifications-container {
   margin-right: 5px;
   background-color: darkslategrey;
@@ -764,6 +775,7 @@ body {
   bottom: 0;
   right: 0;
   z-index: 1000; /* This will ensure it stays on top of other elements */
+  animation: slideIn 0.5s ease-out; /* Apply the animation */
 }
 
 .notification-title {
@@ -789,4 +801,51 @@ body {
   font-weight: bolder;
   user-select: none;
   background-color: orangered;
+}
+
+.notification-close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.notification-timestamp {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0;
+  border: none;
+  user-select: none;
+  font-size: 12px;
+}
+
+.floopynewsbutton {
+  display: inline-block;
+  background-color: #1c1c1c;
+  color: white;
+  border: 2px solid white;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s;
+  padding: 0px 0px;
+  border-image-source: linear-gradient(45deg, yellow, orange, yellow, orange, yellow, orange);
+  border-image-slice: 1;
+  width: 200px;
+  height: 100px;
+  font-size: 20px;
+}
+
+.floopynewsbutton:hover {
+  animation: menuBtnPop 0.5s ease-in-out infinite;
+  border: 4px solid white;
 }
