--- a/styles.css
+++ b/styles.css
@@ -988,3 +988,22 @@ input:checked + .slider:before {
   animation: menuBtnPop 0.5s ease-in-out infinite;
   border: 4px solid whitesmoke;
 }
+
+.favoritebtn {
+  display: inline-block;
+  background-color: #1c1c1c;
+  color: white;
+  border: px solid white;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s;
+  padding: 10px 20px; /* Increase the padding values to make the button larger */
+  border-image-source: linear-gradient(45deg, yellow, black, yellow, black, yellow, black);
+  border-image-slice: 1;
+}
+
+.favoritebtn:hover {
+  border: 4px solid whitesmoke;
+  animation: rainbowGlow 2s linear infinite;
+}
